[project]
name = "autodev"
version = "0.1.0"
description = "Personal environment for agent-assisted development using a throwaway virtual machine"
requires-python = ">=3.13"
dependencies = [
    "hcloud",
    "python-telegram-bot",
    "python-decouple",
    "python-dotenv",
    "configargparse",
    "pyyaml>=6.0.3",
]
